update map and status

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "~4.11.x",
     "kerberos": "~0.0.x",
     "parse": "~1.8.0",
-    "parse-server": "*"
+    "parse-server": "*",
+    "twit": "^2.2.5"
   },
   "scripts": {
     "start": "node index.js"
